# ddl

./: .gitignore  ddl.cabal  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/5e65f5de/: cabal_macros.h
dist-newstyle/cache/: plan.json
src/: Main.hs
src/DDL/: DDLToken.hs  Interpreter.hs
